--- a/CampusNexus-NG/src/app/layouts/faculty-layout/faculty-sidebar/faculty-sidebar.component.html
+++ b/CampusNexus-NG/src/app/layouts/faculty-layout/faculty-sidebar/faculty-sidebar.component.html
@@ -3,8 +3,8 @@
     <!-- Profile Section -->
     <div class="flex justify-end">
         <a routerLink="/faculty/edit-profile" class="text-gray-300 hover:text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 fill-gray-300 hover:fill-blue-700" viewBox="0 0 348.882 348.882"
-                width="24" height="24">
+            <svg xmlns="http://www.w3.org/2000/svg" class="w-5 fill-gray-300 hover:fill-blue-700"
+                viewBox="0 0 348.882 348.882" width="24" height="24">
                 <path
                     d="m333.988 11.758-.42-.383A43.363 43.363 0 0 0 304.258 0a43.579 43.579 0 0 0-32.104 14.153L116.803 184.231a14.993 14.993 0 0 0-3.154 5.37l-18.267 54.762c-2.112 6.331-1.052 13.333 2.835 18.729 3.918 5.438 10.23 8.685 16.886 8.685h.001c2.879 0 5.693-.592 8.362-1.76l52.89-23.138a14.985 14.985 0 0 0 5.063-3.626L336.771 73.176c16.166-17.697 14.919-45.247-2.783-61.418zM130.381 234.247l10.719-32.134.904-.99 20.316 18.556-.904.99-31.035 13.578zm184.24-181.304L182.553 197.53l-20.316-18.556L294.305 34.386c2.583-2.828 6.118-4.386 9.954-4.386 3.365 0 6.588 1.252 9.082 3.53l.419.383c5.484 5.009 5.87 13.546.861 19.03z"
                     data-original="#000000" />
@@ -34,8 +34,11 @@
         <li>
             <a routerLink="/faculty/dashboard" routerLinkActive="bg-[#36336b] text-white"
                 class="text-gray-300 hover:text-white text-sm flex items-center hover:bg-[#36336b] rounded px-4 py-3 transition-all">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-4" fill="currentColor" viewBox="0 0 24 24">
-                    <!-- Dashboard Icon -->
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-4 h-4 mr-4 ml-1"
+                    viewBox="0 0 512 512">
+                    <path
+                        d="M197.332 170.668h-160C16.746 170.668 0 153.922 0 133.332v-96C0 16.746 16.746 0 37.332 0h160c20.59 0 37.336 16.746 37.336 37.332v96c0 20.59-16.746 37.336-37.336 37.336zM37.332 32A5.336 5.336 0 0 0 32 37.332v96a5.337 5.337 0 0 0 5.332 5.336h160a5.338 5.338 0 0 0 5.336-5.336v-96A5.337 5.337 0 0 0 197.332 32zm160 480h-160C16.746 512 0 495.254 0 474.668v-224c0-20.59 16.746-37.336 37.332-37.336h160c20.59 0 37.336 16.746 37.336 37.336v224c0 20.586-16.746 37.332-37.336 37.332zm-160-266.668A5.337 5.337 0 0 0 32 250.668v224A5.336 5.336 0 0 0 37.332 480h160a5.337 5.337 0 0 0 5.336-5.332v-224a5.338 5.338 0 0 0-5.336-5.336zM474.668 512h-160c-20.59 0-37.336-16.746-37.336-37.332v-96c0-20.59 16.746-37.336 37.336-37.336h160c20.586 0 37.332 16.746 37.332 37.336v96C512 495.254 495.254 512 474.668 512zm-160-138.668a5.338 5.338 0 0 0-5.336 5.336v96a5.337 5.337 0 0 0 5.336 5.332h160a5.336 5.336 0 0 0 5.332-5.332v-96a5.337 5.337 0 0 0-5.332-5.336zm160-74.664h-160c-20.59 0-37.336-16.746-37.336-37.336v-224C277.332 16.746 294.078 0 314.668 0h160C495.254 0 512 16.746 512 37.332v224c0 20.59-16.746 37.336-37.332 37.336zM314.668 32a5.337 5.337 0 0 0-5.336 5.332v224a5.338 5.338 0 0 0 5.336 5.336h160a5.337 5.337 0 0 0 5.332-5.336v-224A5.336 5.336 0 0 0 474.668 32zm0 0"
+                        data-original="#000000" />
                 </svg>
                 Dashboard
             </a>
@@ -108,15 +111,15 @@
 
         <!-- Logout -->
         <li>
-            <a (click)="logout()"
-                class="text-gray-300 hover:text-white text-sm flex items-center hover:bg-[#36336b] rounded px-4 py-3 transition-all">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-4" fill="none" stroke="currentColor"
+            <button (click)="logout()"
+                class="text-gray-300 hover:text-white text-sm flex items-center hover:bg-[#36336b] w-full rounded px-4 py-3 transition-all">
+                <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-3 ml-1" fill="none" stroke="currentColor"
                     viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                         d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
                 </svg>
                 Logout
-            </a>
+            </button>
         </li>
     </ul>
 </nav>
